# Ycord

./: .gitignore  CMakeLists.txt  Client.cpp  Client.h  README.md  Server.h  Serveur.cpp  audioclient.cpp  audioclient.h  audiomanager.cpp  audiomanager.h  audiorecorder.cpp  audiorecorder.h  audioserver.cpp  audioserver.h  channelhandler.cpp  channelhandler.h  login.cpp  login.h  login.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  package-lock.json  settings.cpp  settings.ui  uihandler.cpp  uihandler.h
